test/libhyperion/syntaxTests/receiveQuanta/return_value.hyp
contract C {
    receive() external returns (uint256) {}
}
// ----
// DeclarationError 7793: (17-56): Receive quanta function must be payable, but is "nonpayable".
// DeclarationError 6899: (44-53): Receive quanta function cannot return values.
